--- a/V308/Auswertung.tex
+++ b/V308/Auswertung.tex
@@ -5,7 +5,7 @@ Zunächst wird das Magnetfeld einer langen Spule mit einer Hall-Sonde ausgemesse
 Die Messergebnisse sind in Abbildung (\ref{abb:7}) graphisch dargestellt und in der
 Tabelle (\ref{tab:1}) tabellarisch. Das Magnetfeld dieser Spule wird von links und
 von rechts seperat gemessen, da die Hall-Sonde nicht lang genug ist. Mithilfe
-der Gleichung (\ref{}) wird die Theoriekurve bestimmt. Die Parameter der Spule lauten:
+der Gleichung (\ref{eq:7}) wird die Theoriekurve bestimmt. Die Parameter der Spule lauten:
 
 \begin{itemize}
   \item Windungszahl: n=300
@@ -57,7 +57,7 @@ der Gleichung (\ref{}) wird die Theoriekurve bestimmt. Die Parameter der Spule l
 
 Daraufhin wird das Magnetfeld einer kürzeren Spule untersucht. Die Messwerte sind in
 Tabelle (\ref{tab:2}) und in Abbildung (\ref{abb:8}) dargestellt. Auch bei dieser
-Spule werden die Theoriewerte mithilfe der Gleichung (\ref{eq:}) bestimmt. Die
+Spule werden die Theoriewerte mithilfe der Gleichung (\ref{eq:7}) bestimmt. Die
 Parameter dieser Spule lauten wie folgt:
 
 \begin{itemize}
@@ -318,93 +318,31 @@ der Kurve zu bestimmen.
   \centering
   \caption{Messwerte für die Hysteresekurve.}
   \label{tab:7}
-  \begin{tabular}{c c}
+  \begin{tabular}{c c| c c| c c|c c}
     \toprule
-    $I/\si{\ampere}$ & $B/\si{\milli\tesla}$ \\
+    $I/\si{\ampere}$ & $B/\si{\milli\tesla}$ & $I/\si{\ampere}$ & $B/\si{\milli\tesla}$& $I/\si{\ampere}$ & $B/\si{\milli\tesla}$& $I/\si{\ampere}$ & $B/\si{\milli\tesla}$ \\
     \midrule
-    10    & 694,2 \\
-    9,5   & 683,4 \\
-    9     & 675,1 \\
-    8,5   & 666,7 \\
-    8     & 656,7 \\
-    7,5   & 647,1 \\
-    7     & 636,5 \\
-    6,5   & 625,0 \\
-    6     & 612,4 \\
-    5,5   & 598,7 \\
-    5     & 583,1 \\
-    4,5   & 566,7 \\
-    4     & 548,0 \\
-    3,5   & 526,9 \\
-    3     & 502,8 \\
-    2,5   & 472,1 \\
-    2     & 436,9 \\
-    1,5   & 386,8 \\
-    1     & 308,3 \\
-    0,5   & 212,0 \\
-    0     & 126,5 \\
-    0     &  56,5 \\
-    -0,5  &  20,2 \\
-    -1    & -76,8 \\
-    -1,5  &-160,2 \\
-    -2    &-241,7 \\
-    -2,5  &-313,7 \\
-    -3    &-370,0 \\
-    -3,5  &-422,5 \\
-    -4    &-460,2 \\
-    -4,5  &-495,9 \\
-    -5    &-521,8 \\
-    -5,5  &-546,1 \\
-    -6    &-568,2 \\
-    -6,5  &-588,2 \\
-    -7    &-605,2 \\
-    -7,5  &-622,2 \\
-    -8    &-636,9 \\
-    -8,5  &-651,3 \\
-    -9    &-664,6 \\
-    -9,5  &-676,9 \\
-    -10   &-688,4 \\
-    -9,5  &-680,1 \\
-    -9    &-672,2 \\
-    -8,5  &-663,5 \\
-    -8    &-653,6 \\
-    -7,5  &-644,0 \\
-    -7    &-632,8 \\
-    -6,5  &-621,6 \\
-    -6    &-608,5 \\
-    -5,5  &-595,3 \\
-    -5    &-580,2 \\
-    -4,5  &-564,0 \\
-    -4    &-544,9 \\
-    -3,5  &-522,9 \\
-    -3    &-497,6 \\
-    -2,5  &-470,9 \\
-    -2    &-434,1 \\
-    -1,5  &-383,1 \\
-    -1    &-318,3 \\
-    -0,5  &-211,3 \\
-    0     &-123,4 \\
-    0     &-106,0 \\
-    0,5   & -29,6 \\
-    1     &  64,2 \\
-    1,5   & 151,8 \\
-    2     & 239,7 \\
-    2,5   & 311,6 \\
-    3     & 371,8 \\
-    3,5   & 430,8 \\
-    4     & 460,0 \\
-    4,5   & 495,0 \\
-    5     & 523,5 \\
-    5,5   & 547,3 \\
-    6     & 568,2 \\
-    6,5   & 587,0 \\
-    7     & 605,8 \\
-    7,5   & 623,8 \\
-    8     & 635,9 \\
-    8,5   & 650,6 \\
-    9     & 664,1 \\
-    9,5   & 675,9 \\
-    10    & 687,7 \\
+    10    & 694,2 & 0     & 56,5 &-9,5  &-680,1&0     &-106,0   \\
+    9,5   & 683,4 & -0,5  & 20,2 &-9    &-672,2&0,5   & -29,6  \\
+    9     & 675,1 & -1    & -76,8&-8,5  &-663,5&1     &  64,2   \\
+    8,5   & 666,7 & -1,5  &-160,2&-8    &-653,6&1,5   & 151,8   \\
+    8     & 656,7 & -2    &-241,7&-7,5  &-644,0&2     & 239,7   \\
+    7,5   & 647,1 & -2,5  &-313,7&-7    &-632,8&2,5   & 311,6   \\
+    7     & 636,5 & -3    &-370,0&-6,5  &-621,6&3     & 371,8   \\
+    6,5   & 625,0 & -3,5  &-422,5&-6    &-608,5&3,5   & 430,8   \\
+    6     & 612,4 & -4    &-460,2&-5,5  &-595,3&4     & 460,0   \\
+    5,5   & 598,7 & -4,5  &-495,9&-5    &-580,2&4,5   & 495,0   \\
+    5     & 583,1 & -5    &-521,8&-4,5  &-564,0&5     & 523,5   \\
+    4,5   & 566,7 & -5,5  &-546,1&-4    &-544,9&5,5   & 547,3   \\
+    4     & 548,0 & -6    &-568,2&-3,5  &-522,9&6     & 568,2   \\
+    3,5   & 526,9 & -6,5  &-588,2&-3    &-497,6&6,5   & 587,0   \\
+    3     & 502,8 & -7    &-605,2&-2,5  &-470,9&7     & 605,8   \\
+    2,5   & 472,1 & -7,5  &-622,2&-2    &-434,1&7,5   & 623,8   \\
+    2     & 436,9 & -8    &-636,9&-1,5  &-383,1&8     & 635,9   \\
+    1,5   & 386,8 & -8,5  &-651,3&-1    &-318,3&8,5   & 650,6   \\
+    1     & 308,3 & -9    &-664,6&-0,5  &-211,3&9     & 664,1   \\
+    0,5   & 212,0 & -9,5  &-676,9&0     &-123,4&9,5   & 675,9   \\
+    0     & 126,5 & -10   &-688,4& - & -       &10    & 687,7   \\
     \bottomrule
   \end{tabular}
 \end{table}
@@ -419,7 +357,7 @@ der Kurve zu bestimmen.
 Aus dem Graphen lässt sich nun die Sättigungsmagnetisierung, die Remanenz und die
 Koerzitivkraft bestimmen.
 
-Die Sättigungsmagnetisierung kann nur näherungsweise Bestimmt werden, da die
+Die Sättigungsmagnetisierung kann nur näherungsweise bestimmt werden, da die
 maximale Spannung des Generators \SI{10}{\volt} ist und sich bei dieser Spannung noch
 keine Sättigungsmagnetisierung einstellt. Näherungsweise ist die Sättigungsmagnetisierung
 damit
