--- a/V308/D.tex
+++ b/V308/D.tex
@@ -14,7 +14,7 @@ Magnetfeld.
   \label{abb:4}
 \end{figure}
 Für die Messung des Magnetfeldes der Helmholz-Spule wird eine transversale Sonde verwendet.
-Dabei misst man sowohl im Inneren der beiden Spule als auch außerhalb die Magnetfelder.
+Dabei wird im Inneren der beiden Spule als auch außerhalb die Magnetfelder gemessen.
 In Abbildung (\ref{abb:5}) ist der Versuchsaufbau dargestellt.
 \begin{figure}[H]
   \centering
