--- a/V308/Diskussion.tex
+++ b/V308/Diskussion.tex
@@ -7,9 +7,9 @@ musste bei der langen Spule von beiden Seiten seperat gemessen werden und die je
 Messwerte haben sich nie überschnitten, was erklärt warum die Messwerte im inneren
 der Spule einen Sprung von \SI{0.1}{\milli\tesla}.
 
-Anhand des ersten Graphen des Spulenpaares erkennt man, dass bei dem Abstand \SI{0.07}{\meter}
+Die ersten Graphen des Spulenpaares geht hervor, dass bei dem Abstand \SI{0.07}{\meter}
 das Magnetfeld innerhalb der Spule sehr homogen ist, was die Theorie auch ergeben hat.
-Da der Abstand nicht genau der Radius der Spulen ist ergibt sich eine leichte Abweichung
+Da der Abstand nicht genau der Radius der Spulen ist, ergibt sich eine leichte Abweichung
 von den Theoriewerten. Auch bei den breiteren Abständen wird gut sichtbar, dass
 das Magnetfeld zwischen den Spulen immer inhomogener wird, wie es in der Theorie
 erwartet wird.
@@ -17,4 +17,4 @@ erwartet wird.
 Bei der Hysteresekurve fällt auf, dass es bei der Remanenz einen Sprung des Magnetfeldes
 gibt, weil der Generator nur eine Spannung von $0-10\si{\volt}$ erzeugen kann und
 er bei der Remanenz umgepolt werden muss. Außerdem konnte das Material nicht vollständig
-entmagnetisiert werden, was auch zu Fehlern geführt haben könnte. 
+entmagnetisiert werden, was auch zu Fehlern geführt haben könnte.
