--- a/V308/Auswertung.tex
+++ b/V308/Auswertung.tex
@@ -123,7 +123,8 @@ verschiedenen Abständen der Spule ermittelt. Die Parameter des Spulenpaares lau
 
 Der erste Abstand der beiden Spulen ist \SI{0.07}{\meter}. Für diesen Fall sind
 die Messergebnisse in Tabelle (\ref{tab:3}) und in der Abbildung (\ref{abb:9})
-dargestellt.
+dargestellt. Bei diesem Abstand ist das Spulenpaar einer Helmholtz-Spule am ähnlichsten,
+deshalb kann mit der Gleichung (\ref{eq:8}) eine Theoriekurve bestimmt werden.
 
 \begin{table}[H]
   \centering
