--- a/V308/Diskussion.tex
+++ b/V308/Diskussion.tex
@@ -5,7 +5,8 @@ die Theoriekurve unterhalb der gemessenen Werten liegt. Das kann daran liegen, d
 der Strom der Spule nicht genau ermittelt wurde durch Parallaxefehler. Außerdem
 musste bei der langen Spule von beiden Seiten seperat gemessen werden und die jeweiligen
 Messwerte haben sich nie überschnitten, was erklärt warum die Messwerte im inneren
-der Spule einen Sprung von \SI{0.1}{\milli\tesla}.
+der Spule einen Sprung von \SI{0.1}{\milli\tesla}. Ein weiterer Grund für das Abweichen der
+Messwerte ist, dass nicht genau bestimmt werden konnte ab wann in der Spule gemessen wurde.
 
 Die ersten Graphen des Spulenpaares geht hervor, dass bei dem Abstand \SI{0.07}{\meter}
 das Magnetfeld innerhalb der Spule sehr homogen ist, was die Theorie auch ergeben hat.
