--- a/V308/header.tex
+++ b/V308/header.tex
@@ -109,9 +109,7 @@
 \usepackage{microtype}
 
 % Literaturverzeichnis
-\usepackage[
-  backend=biber,
-]{biblatex}
+\usepackage[backend=biber, style=ieee]{biblatex}
 % Quellendatenbank
 \addbibresource{lit.bib}
 %\addbibresource{programme.bib}
