--- a/V308/Auswertung.tex
+++ b/V308/Auswertung.tex
@@ -111,7 +111,7 @@ Parameter dieser Spule lauten wie folgt:
 
 \subsection{Magnetfeld einer Helmholtz-Spule}
 
-In dem zweiten Teil des Versuches wird nun das Magnetfeld einer Helmholz-Spule mit
+In dem zweiten Teil des Versuches wird nun das Magnetfeld einer Helmholtz-Spule mit
 verschiedenen Abständen der Spule ermittelt. Die Parameter des Spulenpaares lauten:
 
 \begin{itemize}
@@ -128,7 +128,7 @@ deshalb kann mit der Gleichung (\ref{eq:8}) eine Theoriekurve bestimmt werden.
 
 \begin{table}[H]
   \centering
-  \caption{Messwerte der Helmholz-Spule für den Abstand \SI{0.07}{\meter}.}
+  \caption{Messwerte der Helmholtz-Spule für den Abstand \SI{0.07}{\meter}.}
   \label{tab:3}
   \begin{tabular}{c c}
     \toprule
@@ -235,7 +235,7 @@ werden die Messwerte in der Tabelle (\ref{tab:4}) und Abbildung (\ref{abb:10}) d
   \label{abb:10}
 \end{figure}
 
-Als letztes wird eine Helmholz-Spule mit dem Abstand \SI{0.14}{\meter} untersucht.
+Als letztes wird eine Helmholtz-Spule mit dem Abstand \SI{0.14}{\meter} untersucht.
 Die Messwerte des Magnetfeldes werden in der Tabelle (\ref{tab:5}) und in der Abbildung
 (\ref{abb:11}) dargestellt.
 
