--- a/V308/D.tex
+++ b/V308/D.tex
@@ -13,13 +13,13 @@ Magnetfeld.
   \caption{Versuchsaufbau zur Messung der Magnetspule[1].}
   \label{abb:4}
 \end{figure}
-Für die Messung des Magnetfeldes der Helmholz-Spule wird eine transversale Sonde verwendet.
+Für die Messung des Magnetfeldes der Helmholtz-Spule wird eine transversale Sonde verwendet.
 Dabei wird im Inneren der beiden Spule als auch außerhalb die Magnetfelder gemessen.
 In Abbildung (\ref{abb:5}) ist der Versuchsaufbau dargestellt.
 \begin{figure}[H]
   \centering
   \includegraphics[width=10cm, height= 7cm]{Abb5.png}
-  \caption{Versuchsaufbau zur Messung der Magnetfelder der Helmholz-Spule[1].}
+  \caption{Versuchsaufbau zur Messung der Magnetfelder der Helmholtz-Spule[1].}
   \label{abb:5}
 \end{figure}
 Für die Bestimmung der Hysteresekurve wird, wie in Abbildung(\ref{abb:6}) dargestellt,
