--- a/V308/Theorie.tex
+++ b/V308/Theorie.tex
@@ -68,7 +68,7 @@ mit $l= 2\pi r_T$ zu
 \end{equation}
 
 umschreiben. Dabei ist $r_T$ der Radius des Torus.
-Ein anderes Verfahren zu Herrichtung eines homogenen Magnetfeldes ist die Helmholz-Spule.
+Ein anderes Verfahren zu Herrichtung eines homogenen Magnetfeldes ist die Helmholtz-Spule.
 Zwei parallele Kreisspulen, die die gleiche Stromrichtung besitzen, erzeugen ein homogenes
 Feld im Inneren der beiden Spulen. Eine Darstellung ist in Abbildung(\ref{abb:2}) zu sehen.
 
