--- a/V308/D.tex
+++ b/V308/D.tex
@@ -3,9 +3,9 @@ Zur Berechnung des Magnetfeldes der Spule wird eine Hall-Sonde verwendet.
 Die Hall-Sonde beruht auf dem Hall-Effekt. An der Spitze der Hall-Sonde befindet sich
 ein Leiterplättchen an das ein Strom angeschlossen ist. Durch ein Magnetfeld wirkt senkrecht
 auf die Ladung die Lorenzkraft und erzeugt ein Verschiebungsstrom und ebenfalls eine Spannung (Hall-Spannung).
-Mit Hilfe der Hall-Spannung kann die Stärke des Magnetfeldes, die von außen erzeugt worden ist, messen.
-In Abbildung (\ref{abb:4}) ist der Versuchsaufbau dargestellt, dabei wird eine longitudinal Sonde verwenden.
-Anschließend fährt die Sonde im Inneren der Magnetspule in verschiedenen Abstände ab und misst dabei das
+Mit Hilfe der Hall-Spannung kann die Stärke des Magnetfeldes, die von außen erzeugt worden ist, gemessen werden.
+In Abbildung (\ref{abb:4}) ist der Versuchsaufbau dargestellt, dabei wird eine longitudinale Sonde verwenden.
+Anschließend  wird die Sonde im Inneren der Magnetspule an verschiedenen Abständen positioniert und dabei misst sie das
 Magnetfeld.
 \begin{figure}[H]
   \centering
