--- a/V308/Protokoll.tex
+++ b/V308/Protokoll.tex
@@ -12,7 +12,7 @@
 \begin{document}
 \maketitle
 \setlength{\parindent}{0pt}
-%\thispagestyle{empty}
+\thispagestyle{empty}
 \tableofcontents
 \newpage
 \input{Theorie.tex}
