--- a/V308/Auswertung.tex
+++ b/V308/Auswertung.tex
@@ -126,6 +126,15 @@ die Messergebnisse in Tabelle (\ref{tab:3}) und in der Abbildung (\ref{abb:9})
 dargestellt. Bei diesem Abstand ist das Spulenpaar einer Helmholtz-Spule am ähnlichsten,
 deshalb kann mit der Gleichung (\ref{eq:8}) eine Theoriekurve bestimmt werden.
 
+Der Theoretische Wert des Magnetfeldes zwischen den Spulen ergibt sich mithilfe der
+Gleichung (\ref{eq:2}) zu:
+\begin{equation*}
+  B = \SI{4.006}{\milli\tesla}
+\end{equation*}
+
+Im Zentrum des Spulenpaares wurde der Wert \SI{3.764}{\milli\tesla}, damit ergibt sich eine
+Abweichung von $6,04 \%$.
+
 \begin{table}[H]
   \centering
   \caption{Messwerte der Helmholtz-Spule für den Abstand \SI{0.07}{\meter}.}
@@ -177,6 +186,15 @@ deshalb kann mit der Gleichung (\ref{eq:8}) eine Theoriekurve bestimmt werden.
 
 Der nächste Abstand der beiden Spulen ist \SI{0.1}{\meter}. Auch in diesem Fall
 werden die Messwerte in der Tabelle (\ref{tab:4}) und Abbildung (\ref{abb:10}) dargestellt.
+
+Auch hier lässt sich der Theoriewert mit der Gleichung (\ref{eq:2}) berechnen:
+
+\begin{equation*}
+  B = \SI{2.872}{\milli\tesla}
+\end{equation*}
+
+Der gemessene Wert im Zentrum der Spule ist \SI{2.864}{\milli\tesla} womit die Abweichung
+$ 0,28\% $ beträgt.
 
 \begin{table}[H]
   \centering
@@ -239,6 +257,15 @@ Als letztes wird eine Helmholtz-Spule mit dem Abstand \SI{0.14}{\meter} untersuc
 Die Messwerte des Magnetfeldes werden in der Tabelle (\ref{tab:5}) und in der Abbildung
 (\ref{abb:11}) dargestellt.
 
+Der theoretische Wert im Zentrum des Spulenpaares beträgt für diesen Abstand
+
+\begin{equation*}
+  B = \SI{1.782}{\milli\tesla}
+\end{equation*}
+
+Dieser Wert wurde mithilfe der Gleichung (\ref{eq:2}) bestimmt. Der gemessene Wert
+im Zentrum der Spule beträgt \SI{1.835}{\milli\tesla} womit sich eine Abweichung
+von $2,97 \%$ ergibt.
 \begin{table}[H]
   \centering
   \caption{Messwerte des Spulenpaares mit dem Abstand \SI{0.14}{\meter}.}
@@ -290,7 +317,7 @@ Die Messwerte des Magnetfeldes werden in der Tabelle (\ref{tab:5}) und in der Ab
 \subsection{Bestimmung der Hysteresekurve}
 
 In dem letzten Teil wird nun die Hysteresekurve eines Materials bestimmt. Dafür werden
-die Messwerte Graphisch in der Abbildung (\ref{abb:12}) dargestellt um die Parameter
+die Messwerte graphisch in der Abbildung (\ref{abb:12}) dargestellt um die Parameter
 der Kurve zu bestimmen.
 
 \begin{table}
