--- a/V308/Diskussion.tex
+++ b/V308/Diskussion.tex
@@ -13,8 +13,12 @@ das Magnetfeld innerhalb der Spule sehr homogen ist, was die Theorie auch ergebe
 Da der Abstand nicht genau der Radius der Spulen ist, ergibt sich eine leichte Abweichung
 von den Theoriewerten. Auch bei den breiteren Abständen wird gut sichtbar, dass
 das Magnetfeld zwischen den Spulen immer inhomogener wird, wie es in der Theorie
-erwartet wird.
+erwartet wird. Das wird auch gut sichtbar anhand der prozentualen Abweichungen, die
+$2,97 \% , 0,28\% , 6,04 \%$ betragen.
 
+Wie vorher erwähnt ergibt sich aus der Hysteresekurve die Sättigungsmagnetisierung
+zu $B_s = \SI{694.2}{\milli\tesla}$, die Remanenz zu $B_r = \SI{91.5(350)}{\milli\tesla}$ und
+die Koerzitivkraft zu $I_c = \SI{-0.6}{\ampere}$.
 Bei der Hysteresekurve fällt auf, dass es bei der Remanenz einen Sprung des Magnetfeldes
 gibt, weil der Generator nur eine Spannung von $0-10\si{\volt}$ erzeugen kann und
 er bei der Remanenz umgepolt werden muss. Außerdem konnte das Material nicht vollständig
