--- a/V308/Diskussion.tex
+++ b/V308/Diskussion.tex
@@ -14,7 +14,7 @@ Da der Abstand nicht genau der Radius der Spulen ist, ergibt sich eine leichte A
 von den Theoriewerten. Auch bei den breiteren Abständen wird gut sichtbar, dass
 das Magnetfeld zwischen den Spulen immer inhomogener wird, wie es in der Theorie
 erwartet wird. Das wird auch gut sichtbar anhand der prozentualen Abweichungen, die
-$2,97 \% , 0,28\% , 6,04 \%$ betragen.
+$2,97 \% ,\, 0,28\% ,\, 6,04 \%$ betragen.
 
 Wie vorher erwähnt ergibt sich aus der Hysteresekurve die Sättigungsmagnetisierung
 zu $B_s = \SI{694.2}{\milli\tesla}$, die Remanenz zu $B_r = \SI{91.5(350)}{\milli\tesla}$ und
