--- a/V303/lit.bib
+++ b/V303/lit.bib
@@ -1,20 +1,5 @@
 @manual{1,
   author = {TU Dortmund},
-  title = {Anleitung zum Versuch 308: Spulen und Magnetfelder},
+  title = {Anleitung zum Versuch 303: Der Lock-In-Verstärker},
   year = "2017"
 }
-
-@manual{2,
-  title = {Magnetic Field on the Axis of a Solenoid},
-  date = "2008-03-26",
-  url = "http://www.phys.uri.edu/gerhard/PHY204/tsl215.pdf",
-  urldate = "2017-12-20"
-  }
-
-@manual{3,
-  author = {Eric Dennison},
-  title = {On-Axis Field of an Ideal Helmholtz Coil},
-  year = "2005",
-  url = "https://tiggerntatie.github.io/emagnet/helmholtz/idealhelmholtz.htm",
-  urldate = "2017-12-20"
-  }
